--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: scp -r * tina@brucette.yolocolo.se
+        run: scp -r * tina@brucette.yolocolo.se:webroot/
