--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
         run: | 
          mkdir .ssh
          echo "${{ secrets.DEPLOYMENT_PRIVATE_KEY }}" > .ssh/id_rsa
+         ls -la .ssh/
          scp -P2447 -r -o StrictHostKeyChecking=no * tina@brucette.yolocolo.se:webroot/
       
         
