--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Run a one-line script
         run: | 
          mkdir .ssh
-         echo "${{ secrets.DEPLOYMENT_PRIVATE_KEY }}" > .ssh/id_rsa
+         echo "${{ secrets.DEPLOYMENT_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+         chmod 600 ~/.ssh/id_rsa
          ls -la .ssh/
          scp -P2447 -r -o StrictHostKeyChecking=no * tina@brucette.yolocolo.se:webroot/
       
